--- a/index.html
+++ b/index.html
@@ -5,20 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redes sociais</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header>
-<h1>Relatório da rede sociais</h1>
-<nav>
-<a href="index.html">Mundo</a>
-<a href="#">Minha escola</a>
+    <header><!--cabeçalho-->
+        <h1>Relatório da rede sociais</h1><!--título-->
+        <nav> <!--cria um menu-->
+            <a href="index.html">Mundo</a><!--insere link-->
+            <a href="#">Minha escola</a><!--insere link-->
 
-</nav>
+        </nav>
 
     </header>
+    <main class="graficos-section"><!-- coloca o conteudo (gráficos)-->
 
+        <section class="graficos-container" id="graficos-container">
+            <!--Colocar os gráficos-->
 
+        </section>
+
+    </main>
+
+    <footer><!--rodapé-->
+        <p>Desenvolvido por Gilmar Horchulhak</p>
+    </footer>
 </body>
 
 </html>
