--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </footer>
 
 <script type="module" src="InformacoeGlobais.js"></script>
+<script type="module" src="pessoasConectadas.js"></script>
 </body>
 
 </html>
