--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <script type="module" src="InformacoeGlobais.js"></script>
 
-<script type="module" src="pessoasConectadas.js"></script>
+<script type="module" src="quantidadeUsuarios.js"></script>
 </body>
 
 </html>
