--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <p>Desenvolvido por Gilmar Horchulhak</p>
     </footer>
 
+<script type="module" src="common.js"></script>
 <script type="module" src="InformacoeGlobais.js"></script>
 <script type="module" src="quantidadeUsuarios.js"></script>
 </body>
